--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "author": "CrispyyBaconx",
     "license": "MIT",
     "dependencies": {
-        "dotenv": "^16.0.1",
-        "ethereumjs-util": "^7.1.5"
+        "ethereumjs-util": "^7.1.5",
+        "readline-sync": "^1.4.10"
     },
     "type": "module"
 }
